--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 <div class="creditos">
   Desenvolvido por 
   <a href="https://www.instagram.com/nexus.sensix/" target="_blank">
-    <i class="fab fa-instagram"></i> @nexus.sensix
+    <i class="fab fa-instagram"></i> @lostzzy and vz sensi
   </a>
 </div>
 
@@ -352,3 +352,4 @@ function injetarAuxilio() {
 
 </body>
 </html>
+
