Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
 
 <div class="creditos">
   Desenvolvido por 
-  <a href="https://www.instagram.com/nexus.sensix/" target="_blank">
-    <i class="fab fa-instagram"></i> @lostzzy and vz sensi
+  <a href="https://www.instagram.com/lostxzzy?igsh=MTAyNjVjd2I1M2VreQ==" target="_blank">
+    <i class="fab fa-instagram"></i> @lostxzzy
   </a>
 </div>
 
@@ -352,4 +352,5 @@ function injetarAuxilio() {
 
 </body>
 </html>
+
 
